objects/BICE_Solicitud_Cliente__c.object
<CustomObject>
    <fields>
        <fullName>Days_from_last_modify__c</fullName>
        <formula>NOW()-LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días de última modificación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Descripci_n_cuenta__c</fullName>
        <label>Descripción cuenta</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deuda_Sistema_Financiero_MM_pesos__c</fullName>
        <label>Deuda Sistema Financiero (MM$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direcci_n_Comercial_DEMO__c</fullName>
        <label>Dirección Comercial DEMO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentaci_n_sustentatoria_EESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentación sustentatoria EESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_de_Inversiones__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo de Inversiones</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BICE_Solicitudes_Clientes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Rep_Legal_Inv__c</fullName>
        <label>Email Rep Legal Inv</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_comercial_Inv__c</fullName>
        <label>Email comercial Inv</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_facturacion_Inv__c</fullName>
        <label>Email facturación Inv</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_personal_Inv__c</fullName>
        <label>Email personal Inv</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Empleador__c</fullName>
        <label>Empleador</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escritura_publica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escritura pública</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado_Creaci_n_de_Cliente__c</fullName>
        <label>Creación Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Pendiente</fullName>
                </value>
                <value>
                    <fullName>Realizado</fullName>
                </value>
                <value>
                    <fullName>Reparos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_Deudor__c</fullName>
        <label>Estado Deudor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_civil__c</fullName>
        <label>Estado civil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soltero</fullName>
                </value>
                <value>
                    <fullName>Casado</fullName>
                </value>
                <value>
                    <fullName>Viudo</fullName>
                </value>
                <value>
                    <fullName>Convivencia Civil</fullName>
                </value>
                <value>
                    <fullName>Divorciado</fullName>
                </value>
                <value>
                    <fullName>Separado</fullName>
                </value>
                <value>
                    <fullName>Sin Información</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_solicitud__c</fullName>
        <label>Estado solicitud</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preparación</fullName>
                    <default>true</default>
                    <label>Preparación</label>
                </value>
                <value>
                    <fullName>Solicitado</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Aprobación finalizada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estracto_Diario_Oficial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estracto Diario Oficial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FATCA_Information__c</fullName>
        <description>Este campo lo llena el Área Clientes solamente.</description>
        <label>Información FATCA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Es US Person</fullName>
                </value>
                <value>
                    <fullName>No es US Person</fullName>
                </value>
                <value>
                    <fullName>Es FFI</fullName>
                </value>
                <value>
                    <fullName>Es US Entity</fullName>
                </value>
                <value>
                    <fullName>No es US Entity</fullName>
                </value>
                <value>
                    <fullName>Es Recalcitrante</fullName>
                </value>
                <value>
                    <fullName>Pendiente Ejecutivo</fullName>
                </value>
                <value>
                    <fullName>Pertenece al Stock al 30/06/2014</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Constitucion_Empresa__c</fullName>
        <label>Fecha Constitución Empresa</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_MAC_Apertura_Cuenta__c</fullName>
        <label>Fecha MAC Apertura Cuenta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Solicitud_Crear_Cliente__c</fullName>
        <label>Fecha Solicitud Crear Cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_apertura_cta_cte__c</fullName>
        <label>Fecha apertura cta cte</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_creacion_Sebra__c</fullName>
        <label>Fecha creación Sebra</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_conversi_n_a_cliente__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha de conversión a cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_declaracion_de_margen__c</fullName>
        <label>Fecha de declaración de margen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_vencimiento_MAC__c</fullName>
        <label>Fecha de vencimiento MAC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_declaracion_jurada_art_85__c</fullName>
        <label>Fecha declaración jurada (art. 85)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_fin_relaci_n__c</fullName>
        <label>Fecha fin relación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_inicio_relaci_n__c</fullName>
        <label>Fecha inicio relación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_resultado_comit__c</fullName>
        <label>Fecha resultado comité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ficha_cuenta__c</fullName>
        <label>Ficha cuenta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filial_de_participacion__c</fullName>
        <label>Filial (% de participación)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Form_Art_85__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. Art. 85</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_EESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. EESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_FATCA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form.FATCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Ingreso_Maestro_de_Clientes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. Ingreso Maestro de Clientes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Solicitud_de_Productos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. Solicitud de Productos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Giro_Inv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requerido para crear cliente en Sebra</description>
        <label>Giro</label>
        <referenceTo>Giro__c</referenceTo>
        <relationshipName>CuentasG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grupo_Deudor_Relacionado__c</fullName>
        <label>Grupo Deudor Relacionado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sin Grupo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Buceo</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Ski</fullName>
                </value>
                <value>
                    <fullName>Snowboard</fullName>
                </value>
                <value>
                    <fullName>Windsurf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Idea_de_negocio__c</fullName>
        <label>Idea de negocio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash management</fullName>
                </value>
                <value>
                    <fullName>Comex</fullName>
                </value>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Cuenta corriente</fullName>
                </value>
                <value>
                    <fullName>Cursar inversiones</fullName>
                </value>
                <value>
                    <fullName>Factoring</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Mesa de dinero</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADMINISTRADORAS DE FONDOS DE PENSIONES</fullName>
                </value>
                <value>
                    <fullName>AGENCIA, CORREDORA, ADMIN. Y SOCIEDAD DE INVERSIÓN</fullName>
                </value>
                <value>
                    <fullName>AGRICULTURA TRADICIONAL</fullName>
                </value>
                <value>
                    <fullName>ALIMENTOS, BEBIDAS Y TABACO</fullName>
                </value>
                <value>
                    <fullName>ARRIENDO DE EQUIPOS Y MAQUINARIAS</fullName>
                </value>
                <value>
                    <fullName>ARRIENDO DE VEHÍCULOS</fullName>
                </value>
                <value>
                    <fullName>ASERRADEROS</fullName>
                </value>
                <value>
                    <fullName>ASTILLEROS</fullName>
                </value>
                <value>
                    <fullName>BANCOS</fullName>
                </value>
                <value>
                    <fullName>CLÍNICAS Y HOSPITALES</fullName>
                </value>
                <value>
                    <fullName>COMERCIALIZADORES MAYORISTAS</fullName>
                </value>
                <value>
                    <fullName>CONCESIONARIOS Y DISTRIBUIDORES DE VEHÍCULOS</fullName>
                </value>
                <value>
                    <fullName>CONSERVERAS Y CONGELADOS</fullName>
                </value>
                <value>
                    <fullName>CONSTRUCTORAS HABITACIONALES</fullName>
                </value>
                <value>
                    <fullName>CONTRATISTAS Y TRANPORTISTAS  FORESTALES</fullName>
                </value>
                <value>
                    <fullName>CRIADEROS Y VIVEROS DE PECES Y MARISCOS</fullName>
                </value>
                <value>
                    <fullName>EDITORIALES</fullName>
                </value>
                <value>
                    <fullName>ELEMENTOS PARA LA CONSTRUCCIÓN</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS HOLDINGS</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS PERIODÍSTICAS</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS PRODUCTORAS DE VINO</fullName>
                </value>
                <value>
                    <fullName>EXPORT. Y COMERCIO DE HARINA DE PESCADO</fullName>
                </value>
                <value>
                    <fullName>EXPORTADORES  DE PRODUCTOS MINEROS</fullName>
                </value>
                <value>
                    <fullName>EXPORTADORES DE ACERO</fullName>
                </value>
                <value>
                    <fullName>EXPORTADORES DE FRUTAS</fullName>
                </value>
                <value>
                    <fullName>EXPORTADORES DE PRODUCTOS DE MADERA</fullName>
                </value>
                <value>
                    <fullName>FABRICACIÓN DE MAQUINARIAS Y EQUIPOS</fullName>
                </value>
                <value>
                    <fullName>FABRICACIÓN DE PRODUCTOS FARMACÉUTICOS</fullName>
                </value>
                <value>
                    <fullName>FABRICACIÓN DE PRODUCTOS METÁLICOS</fullName>
                </value>
                <value>
                    <fullName>FABRICACIÓN DE VEHÍCULOS, PARTES Y PIEZAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Info_adicional_Inv_Depto__c</fullName>
        <label>Info adicional Inv (Depto,...)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_adicional_Inv_Oficina__c</fullName>
        <label>Info adicional Inv (Oficina,...)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informacion_adicional_comercial__c</fullName>
        <label>Información adicional comercial</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informacion_del_sistema__c</fullName>
        <formula>IF( Campos_llenados__c ,&quot;&quot;,IMAGE(&quot;/resource/1510165392000/CompletarDatosSolicitudSebra&quot;,&quot;Alert&quot;, 20, 250))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Información del sistema:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informacion_privilegiada_Cargo_SVS_171__c</fullName>
        <label>Información privilegiada (Cargo SVS 171)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informacion_privilegiada__c</fullName>
        <label>Información privilegiada</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intereses__c</fullName>
        <label>Intereses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inv_Tipo_Cliente__c</fullName>
        <description>Inversiones: Campo que se mostrara en vista 360.</description>
        <label>Tipo Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KYC_Aprobado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KYC Aprobado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lugar_de_Nacimiento__c</fullName>
        <label>Lugar de Nacimiento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Afganistán</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alemania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua y Barbuda</fullName>
                </value>
                <value>
                    <fullName>Arabia Saudita</fullName>
                </value>
                <value>
                    <fullName>Argelia</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaiyán</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bangladés</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Baréin</fullName>
                </value>
                <value>
                    <fullName>Bélgica</fullName>
                </value>
                <value>
                    <fullName>Belice</fullName>
                </value>
                <value>
                    <fullName>Benín</fullName>
                </value>
                <value>
                    <fullName>Bielorrusia</fullName>
                </value>
                <value>
                    <fullName>Birmania</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botsuana</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                </value>
                <value>
                    <fullName>Brunéi</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDR__c</fullName>
        <description>Indicador de Rentabilidad utilizado por Banca Personas y Banca Empresas</description>
        <label>MDR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medios_de_pago_para_productos_CDB__c</fullName>
        <label>Medios de pago para productos CDB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modalidad_de_operaci_n__c</fullName>
        <label>Modalidad de operación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modelo_facturaci_n__c</fullName>
        <label>Modelo facturación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facturación Base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monto_MAC_creado__c</fullName>
        <label>Monto MAC aprobado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monto_Preaprobado__c</fullName>
        <description>Monto preaprobado para despliegue de campañas vigentes en vista 360.</description>
        <label>Monto Preaprobado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_cuenta_bancaria__c</fullName>
        <label>N° cuenta bancaria</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_de_cuenta__c</fullName>
        <label>N° de cuenta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nacionalidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chile</fullName>
                    <default>true</default>
                    <label>Chile</label>
                </value>
                <value>
                    <fullName>Afganistan</fullName>
                </value>
                <value>
                    <fullName>Åland</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alemania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguila</fullName>
                </value>
                <value>
                    <fullName>Antigua y Barbuda</fullName>
                </value>
                <value>
                    <fullName>Antillas Holandesas</fullName>
                </value>
                <value>
                    <fullName>Arabia Saudita</fullName>
                </value>
                <value>
                    <fullName>Argelia</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaiyan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrein</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belgica</fullName>
                </value>
                <value>
                    <fullName>Belice</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bielorrusia</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia y Herzegovina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_AUM__c</fullName>
        <label>AUM (MM$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_AccountSource__c</fullName>
        <label>Account Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business intelligence</fullName>
                </value>
                <value>
                    <fullName>Banca Personas</fullName>
                </value>
                <value>
                    <fullName>Banca Personas Fuerza de Venta</fullName>
                </value>
                <value>
                    <fullName>Banca Inversiones</fullName>
                </value>
                <value>
                    <fullName>Banca Empresas y Corporaciones</fullName>
                </value>
                <value>
                    <fullName>Banca Privada</fullName>
                </value>
                <value>
                    <fullName>Sucursales</fullName>
                </value>
                <value>
                    <fullName>Ejecutivos AP</fullName>
                </value>
                <value>
                    <fullName>Red Personal Ejecutivo</fullName>
                </value>
                <value>
                    <fullName>Red Extendida Ejecutivo</fullName>
                </value>
                <value>
                    <fullName>Redes Sociales (LinkedIn, Facebook)</fullName>
                </value>
                <value>
                    <fullName>Referido Cliente</fullName>
                </value>
                <value>
                    <fullName>Base de Datos Interna</fullName>
                </value>
                <value>
                    <fullName>Eventos BICE</fullName>
                </value>
                <value>
                    <fullName>Otros Eventos</fullName>
                </value>
                <value>
                    <fullName>Stand Universidades</fullName>
                </value>
                <value>
                    <fullName>Convenio Inmobiliario</fullName>
                </value>
                <value>
                    <fullName>Partner (Alianzas)</fullName>
                </value>
                <value>
                    <fullName>Referido BICE Banca Personas</fullName>
                </value>
                <value>
                    <fullName>Referido BICE Banca Empresas y Corporaciones</fullName>
                </value>
                <value>
                    <fullName>Referido BICE Inversiones</fullName>
                </value>
                <value>
                    <fullName>Referido BICE Otros</fullName>
                </value>
                <value>
                    <fullName>Base de Datos</fullName>
                </value>
                <value>
                    <fullName>Publicidad</fullName>
                </value>
                <value>
                    <fullName>Sitio Web BICE</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Actividad_Economica_SBIF__c</fullName>
        <label>Actividad Económica (SBIF)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sin definir</fullName>
                </value>
                <value>
                    <fullName>Adm. Pública y Defensa</fullName>
                </value>
                <value>
                    <fullName>Agricultura</fullName>
                </value>
                <value>
                    <fullName>Agricultura y Ganadería excepto Frutic.</fullName>
                </value>
                <value>
                    <fullName>Agroindustria</fullName>
                </value>
                <value>
                    <fullName>Alimentos, Bebidas y Tabaco</fullName>
                </value>
                <value>
                    <fullName>Bienes Inmuebles y Serv. Prest. a Empre.</fullName>
                </value>
                <value>
                    <fullName>Captación y Distribución de Agua</fullName>
                </value>
                <value>
                    <fullName>Celusosa y Papeles</fullName>
                </value>
                <value>
                    <fullName>Comercio al por Mayor</fullName>
                </value>
                <value>
                    <fullName>Comercio al por Menor</fullName>
                </value>
                <value>
                    <fullName>Comercio x Menor, Restaurantes y Hoteles</fullName>
                </value>
                <value>
                    <fullName>Comunicaciones</fullName>
                </value>
                <value>
                    <fullName>Construcción de otras obras</fullName>
                </value>
                <value>
                    <fullName>Construcción de Viviendas</fullName>
                </value>
                <value>
                    <fullName>Construcciones no residenciales</fullName>
                </value>
                <value>
                    <fullName>Construcciones residenciales</fullName>
                </value>
                <value>
                    <fullName>Crédito de consumo</fullName>
                </value>
                <value>
                    <fullName>Crédito hipotecario para la vivienda</fullName>
                </value>
                <value>
                    <fullName>Cuero y Calzado</fullName>
                </value>
                <value>
                    <fullName>Cultivo de Salmones y Truchas</fullName>
                </value>
                <value>
                    <fullName>Distribución y Comercialización de Bebidas Alcohólicas</fullName>
                </value>
                <value>
                    <fullName>Diversión y Esparcimiento</fullName>
                </value>
                <value>
                    <fullName>Electricidad, Gas y Agua</fullName>
                </value>
                <value>
                    <fullName>Electricidad, Gas y Vapor</fullName>
                </value>
                <value>
                    <fullName>Estab. Financieros y de Seguros</fullName>
                </value>
                <value>
                    <fullName>Explotación de Bosques</fullName>
                </value>
                <value>
                    <fullName>Explotación de Minas y Canteras</fullName>
                </value>
                <value>
                    <fullName>Fab. Prod. Mineros, Metálicos y No Metálicos</fullName>
                </value>
                <value>
                    <fullName>Fruticultura</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Apartment__c</fullName>
        <label>Apartment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Apellido_Materno_Conyuge__c</fullName>
        <label>Apellido Materno Cónyuge</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Apellido_Materno__c</fullName>
        <description>Apellido mMaterno del cliente persona natural. (viene de contact)</description>
        <label>Apellido Materno</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>